# crafting_interpreters

./: .gitignore  README.md
clox/: CMakeLists.txt  chunk.h  compiler.c  compiler.h  debug.c  main.c  memory.c  object.c  object.h  table.c  table.h  vm.c  vm.h
examples/: brunch.lox  closure.lox  closure2.lox  cruller.lox  eclair.lox  eggs.lox  expressions.lox  person.lox  statements.lox  toast.lox  upvalues.lox
exercises/dblstrlist/: dblstrlist.c  dblstrlist.h
jlox/: pom.xml
jlox/src/main/java/com/craftinginterpreters/lox/: AstPrinter.java  Environment.java  Lox.java  LoxFunction.java  Resolver.java  Stmt.java  TokenType.java
jlox/src/main/java/com/craftinginterpreters/tool/: GenerateAst.java
jlox/src/test/java/com/craftinginterpreters/lox/: LoxTest.java
rlox/src/: lib.rs  literal.rs  lox.rs  main.rs  scanner.rs  token.rs  token_type.rs
src/clox/: CMakeLists.txt  chunk.c  compiler.c  compiler.h  debug.c  main.c  scanner.c  table.c  value.c  vm.c
src/dblstrlist/: dblstrlist.c  dblstrlist.h  testdblstrlist.c
src/doublylinkedlist/: dblstrlist.c  dblstrlist.h
src/examples/loxlang/: controlflow.lox
src/exercises/dblstrlist/: testdblstrlist.c
src/helloworldc/: helloworld.c
src/jlox/com/craftinginterpreters/lox/: Environment.java  Expr.java  Interpreter.java  Lox.java  LoxClass.java  LoxFunction.java  Parser.java  Resolver.java  Scanner.java  Stmt.java  TokenType.java
src/jlox/com/craftinginterpreters/tool/: GenerateAst.java
src/loxlang/: classes.lox  datatypes.lox  functions.lox  variables.lox
